# fsplit

./: CMakeLists.txt
include/: arg.h  cmd.h  global.h  main.h  path.h  split.h
source/: CMakeLists.txt  arg.c  cmd.c  main.c  path.c  split.c
